--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
        <p>The objective of this project is to utilize JavaScript on a pre-defined canvas, along with CSS and HTML5, to design an animation featuring a plane flying across the sky, passing through clouds with a hot air balloon hovering in the background, simulating a parallax effect. This parallax effect creates a sense of depth and movement throughout the canvas.</p>
         <p>Through this project, we were able to grasp the following concepts:</p>
         <ul>
-            <li><u style="color: #03dac6;">Deep dive into web development</u>: Understanding how multiple languages like HTML, JS, and CSS come together on the execution and hosting of a single `index.html` file to make a reactive webpage.</li><br>
-            <li><u style="color: #03dac6;">Canvas drawing</u>: Understanding how to use the HTML5 canvas element and draw basic shapes.</li><br>
-            <li><u style="color: #03dac6;">Animations and Transformations</u>: Creating smooth animations using `requestAnimationFrame`, updating canvas elements dynamically, and using element-specific update functions.</li><br>
-            <li><u style="color: #03dac6;">Responsive designing</u>: Following responsive designing principles allows us to deliver a prototype that can be deployed universally and can run on devices irrespective of their aspect ratios (including mobile devices, tablets, and desktops). This was possible using the `this` keyword to refer to the current instances of the canvas through `this.width` and `this.height`. The context rendering on the canvas was handled using `this.ctx` for class instances.</li><br>
+            <li><u>Deep dive into web development</u>: Understanding how multiple languages like HTML, JS, and CSS come together on the execution and hosting of a single `index.html` file to make a reactive webpage.</li><br>
+            <li><u>Canvas drawing</u>: Understanding how to use the HTML5 canvas element and draw basic shapes.</li><br>
+            <li><u>Animations and Transformations</u>: Creating smooth animations using `requestAnimationFrame`, updating canvas elements dynamically, and using element-specific update functions.</li><br>
+            <li><u>Responsive designing</u>: Following responsive designing principles allows us to deliver a prototype that can be deployed universally and can run on devices irrespective of their aspect ratios (including mobile devices, tablets, and desktops). This was possible using the `this` keyword to refer to the current instances of the canvas through `this.width` and `this.height`. The context rendering on the canvas was handled using `this.ctx` for class instances.</li><br>
         </ul>
        </section>
        <section name = "Storyboard">
@@ -50,9 +50,9 @@
     <h2>Animation Drawing Assets</h2>
     <p>All drawing assets have been drawn and exported as PNGs from <u>Canva</u> and ported to JavaScript as combinations of Bezier curves using the <u>Inkscape</u> software: <a href="https://inkscape.org" target="_blank">Inkscape</a>.</p>
     <ul>
-      <li><u style="color: #03dac6;">Aeroplane:</u> The aeroplane is an oscillating element created using functions like `beginPath()`, `moveTo()`, `lineTo()`, `bezierCurveTo()`, and `closePath()`, in sequence with `fill()` to fill the closed figures with color.</li><br>
-      <li><u style="color: #03dac6;">Clouds</u>: The clouds are a group of five individual clouds, grouped together in a static element that translates across the canvas in a loop to simulate a moving backdrop.</li><br>
-      <li><u style="color: #03dac6;">Hot Air Balloon</u>:The hot air balloon is a static element designed to enhance the parallax effect of the moving background. It is also drawn using Bezier curves, and `fill()` is used to add multiple colors to the element.</li><br>
+      <li><u >Aeroplane:</u> The aeroplane is an oscillating element created using functions like `beginPath()`, `moveTo()`, `lineTo()`, `bezierCurveTo()`, and `closePath()`, in sequence with `fill()` to fill the closed figures with color.</li><br>
+      <li><u>Clouds</u>: The clouds are a group of five individual clouds, grouped together in a static element that translates across the canvas in a loop to simulate a moving backdrop.</li><br>
+      <li><u>Hot Air Balloon</u>:The hot air balloon is a static element designed to enhance the parallax effect of the moving background. It is also drawn using Bezier curves, and `fill()` is used to add multiple colors to the element.</li><br>
       </ul>
         </section>
     </div>
