--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@
     </div>
      
      <footer>
-         <p>Created by Team Skyline Seekers</p>
+         <p>Created by Team Skyline Seekers<br>
+          Rimjhim Mittal(102103430),
+          Hrsh Dhingra(102103443)
+         </p>
+
          <p>Github:
         <a href="https://github.com/rimjhimittal/cg-docs">@rimjhimittal/cg-docs</a></p>
         </footer>
